# UCSD-SUMS.github.io

./: .gitignore  .gitmodules  README.md  business.html  business.md  cabal.config  circle.yml  events-sp17.html  events-wi17.html  events.html  events.ics  index.html  site.hs  stack.yaml  talks.html  talks.md  ucsd-sums-github-io.cabal
css/: default.css  gcal.css  paginate.css
events/: test-event.md
events/sp17/: board-game.html  board-game.md  elections.html  elections.md  ff-planning  ff-planning.html  ff-planning.md  ff1.html  ff1.md  ff2.html  ff2.md  ff3.html  ff3.md  ff4.html  ff4.md  ff5.html  ff5.md  gbm.html  gbm.md  icecream-social.html  icecream-social.md  infosession.html  infosession.md  integration-bee.html  integration-bee.md  latex-ws-1.html  latex-ws-1.md  latex-ws-2.html  latex-ws-2.md  lightning-talk-1.html  lightning-talk-1.md  lightning-talk-2.html  lightning-talk-2.md  moreff1.html  moreff1.md  moreff2.html  moreff2.md  movie-night.html  movie-night.md  test-event.html  (+3 more)
events/wi17/: latex-workshop.html  latex-workshop.md  lightning-talk-1.html  lightning-talk-1.md  lightning-talk-2.html  lightning-talk-2.md  lightning-talk-3.html  lightning-talk-3.md
templates/: default.html  event-list.html  event-paginate.html  event.html  ical.ics
