name:               ucsd-sums-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , time == 1.6.*
                  , time-locale-compat == 0.1.*
                  , containers == 0.5.*
                  , pandoc == 1.19.*
                  , dates == 0.2.*
                  , parsec == 3.1.*
  ghc-options:      -threaded
  default-language: Haskell2010
